--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
        <br>featuring iconic jazz musicians. 
       <br>Do you think you know anything about them?
     </p>
-
+    <div id="questions"></div>
+    <div id="answers">
+        <ul id="listanswers"></ul>
+    </div>
 </section>
 
 
@@ -29,7 +32,7 @@
 
 
 
-
+<script src="https://code.jquery.com/jquery-3.6.2.min.js" integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
 <script src="./script.js"></script>
 </body>
 </html>
