--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
 <section id="quiz">
     <button id="buttonStart">Start</button>
-    <p>The following quiz has questions
-       <br>featuring iconic jazz musicians. 
-      <br>Do you think you know anything about them?
+    <h1>Coding Quiz Challenge</h1>
+    
     </p>
     <div id="questions"></div>
     <div id="answers">
