refactor functions. fix answers logic

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
 <header>
-    <div id="highscores">View highscores</div>
+    <div id="highscores">Your Score:</div>
     <div id="timer">Time:</div>
 </header>
 
 <section id="quiz">
-    <button id="buttonStart">Start</button>
+    <button id="startButton">Start</button>
     <h1>Coding Quiz Challenge</h1>
     
     </p>
     <div id="questions"></div>
+    <div id="characterDisplay"></div>
     <div id="answers">
         <ul id="listanswers"></ul>
     </div>
