fix random question not showing up

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time for a Quiz</title>
-    <link rel="stylesheet" href="./assests/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
 <header>
@@ -15,13 +15,12 @@
 
 <section id="quiz">
     <button id="startButton">Start</button>
-    <h1>Coding Quiz Challenge</h1>
-    
-    </p>
-    <div id="questions"></div>
+    <h1 id="questions"></h1>
     <div id="characterDisplay"></div>
     <div id="answers">
-        <ul id="listanswers"></ul>
+        <ul id="listanswers">
+            
+        </ul>
     </div>
 </section>
 
@@ -33,6 +32,6 @@
 
 
 
-<script type="module" src="./assests/script.js"></script>
+<script type="module" src="./assets/script.js"></script>
 </body>
 </html>
