get shapes working

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <section id="quiz">
     <button id="startButton">Start</button>
     <h1 id="questions"></h1>
-    <div id="characterDisplay"></div>
+    <div id="imageDisplay"></div>
     <div id="answers">
-        <ul id="listanswers">
+        <ul id="answersList">
             
         </ul>
     </div>
