fix random x bug

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <div id="highscores">Your Score:</div>
+    <div id="userScore">Your Score:</div>
     <div id="timer">Time:</div>
 </header>
 
@@ -18,9 +18,7 @@
     <h1 id="questions"></h1>
     <div id="imageDisplay"></div>
     <div id="answers">
-        <ul id="answersList">
-            
-        </ul>
+        <ul id="answersList"></ul>
     </div>
 </section>
 
