refactor chunky functions

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
 <header>
     <div id="userScore">Your Score:</div>
-    <div id="timer">Time:</div>
 </header>
 
 <section id="quiz">
     <button id="startButton">Start</button>
     <h1 id="questions"></h1>
+    <div class="question-state-container" id="questionStateContainer">
+        <h1 class="question-state" id="questionState"></h1>
+        <p class="countdown" id="countdown"></p>
+    </div>
     <div id="imageDisplay"></div>
     <div id="answers">
         <ul id="answersList"></ul>
